# cric_chat

./: .env  .env.example  .env.sample  .gitignore  DEPLOYMENT_GUIDE.md  Procfile  README.md  RENDER_DEPLOYMENT.md  STREAMLIT_CLOUD.md  STREAMLIT_CLOUD_DEPLOYMENT.md  __init__.py  app.py  app_gunicorn.py  app_wsgi.py  auth.py  build.sh  config.py  data_processor.py  db_store.py  groq_service.py  init_aiven_db.py  init_db.py  llm_service.py  login.py  logs-skddl007-cric_chat-main-streamlit_app.py-2025-05-21T06_18_55.428Z.txt  migrate_data.py  packages.txt  pyproject.toml  query_refinement.py  render.yaml  requirements.txt  run.py  setup.bat  setup.py  setup.sh  start.py  streamlit_app.py  vector_store.py  verify_db.py  wsgi.py
.streamlit/: secrets.toml
data/: Action.csv  Event.csv  Mood.csv  Players.csv  Sublocation.csv  finalTaggedData.csv
scripts/: fix_aiven_db.py  init_aiven_db.py  migrate_to_aiven.py  setup_db.py  setup_db_render.py  test_aiven_connection.py  verify_aiven_db.py
test/: check_db.py  check_events.py  check_pgvector.py  check_players.py  check_press_meet.py  check_schema.py  create_feedback_table.py  create_new_db.py  create_users_table.py  fix_players.py  init_db_verbose.py  migrate_to_new_db.py  test_celebrating.py  test_count_queries.py  test_enhanced_queries.py  test_multiple_players.py  test_query.py  test_query_flow.py  test_query_refinement.py  test_question_types.py  test_similarity.py  test_users_db.py  update_team_code.py
